--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </div>
           <div class="col-4">
               <h2 id="about">Despre mine</h2>
-                  <img src="Images/foto2.jpg" alt="AMC">
+                  <img src="Images/foto2.JPG" alt="AMC">
               <p>M-am născut pe data de 12 aprilie, într-o zi de sâmbătă, în jur de ora 10 dimineața, în anul 1988, în oraşul Nehoiu, Județul Buzău. Copilăria și adolescența mi-am petrecut-o într-o <a id="comuna" href="https://ro.wikipedia.org/wiki/Bisericile_rupestre_din_Mun%C8%9Bii_Buz%C4%83ului" target="_blank">comună</a> cu vestigii rupestre din Buzău până la 19 ani când am plecat la facultate și am rămas în Brașov până în ziua de azi. </p>
           </div>
          </div>
