--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                <li><a href="https://taniaungureanu.github.io/" target="_blank">Tania Ungureanu</a></li>
                <li><a href="https://dragosbv77.github.io" target="_blank">Dragoș Samoșca</a></li>
                <li><a href="http://platforma.scoalainformala.ro/user/view.php?id=5490&amp;course=385" target="_blank">Bogdan Dragomir</a></li>
-               <li><a href="http://platforma.scoalainformala.ro/user/view.php?id=4475&amp;course=385" target="_blank">Cătălin Alexandru Lăzăroiu</a></li>
+               <li><a href="https://catalinalexandru89.github.io/CatalinAlexandru.github.io/" target="_blank">Cătălin Alexandru Lăzăroiu</a></li>
                <li><a href="http://platforma.scoalainformala.ro/user/view.php?id=4977&amp;course=385" target="_blank">Răzvan Cărbunaru</a></li>
                <li><a href="http://platforma.scoalainformala.ro/user/view.php?id=5120&amp;course=385" target="_blank">Monica Moarcăs</a></li>
               <li><a href="http://platforma.scoalainformala.ro/user/view.php?id=4955&amp;course=385" target="_blank">Andrei Șaramet</a></li>
